[gd_scene load_steps=37 format=3 uid="uid://dngr60g6qjlx4"]

[ext_resource type="Script" path="res://Niveles/final_mother.gd" id="1_lnx5o"]
[ext_resource type="Texture2D" uid="uid://dvgnp0nsjy2lu" path="res://Assets/Intro/blackbg.png" id="2_kryy8"]
[ext_resource type="Texture2D" uid="uid://ulfwjyid7db0" path="res://Assets/Intro/Picsart_23-12-28_08-34-05-065.jpg" id="3_e1fpa"]
[ext_resource type="Texture2D" uid="uid://5dixnhm6c77o" path="res://player/player/Idle.png" id="4_j188e"]
[ext_resource type="Texture2D" uid="uid://dbqwrnqaogx6m" path="res://player/player/Walk.png" id="5_3i3es"]
[ext_resource type="Texture2D" uid="uid://xccu2c4ebxps" path="res://Assets/NPC/Mother.png" id="6_01qwq"]
[ext_resource type="PackedScene" uid="uid://c1sx32kth144p" path="res://Dialogos/control_dialog.tscn" id="7_gvnd8"]
[ext_resource type="PackedScene" uid="uid://c3ml3f342bwn8" path="res://Niveles/canvas_layer_transition.tscn" id="8_lviny"]
[ext_resource type="AudioStream" uid="uid://cmrwrmemigf84" path="res://Assets/Audio/Music/Theme_-_Music_Box_-_Innocent_Interlude.ogg" id="9_6a5pk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0teut"]
atlas = ExtResource("4_j188e")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3l1h"]
atlas = ExtResource("4_j188e")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntn5b"]
atlas = ExtResource("4_j188e")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf15f"]
atlas = ExtResource("4_j188e")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4slkq"]
atlas = ExtResource("4_j188e")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dev4a"]
atlas = ExtResource("4_j188e")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_32h7k"]
atlas = ExtResource("5_3i3es")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0rk4"]
atlas = ExtResource("5_3i3es")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbpf"]
atlas = ExtResource("5_3i3es")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2unmi"]
atlas = ExtResource("5_3i3es")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jefl0"]
atlas = ExtResource("5_3i3es")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pjw1"]
atlas = ExtResource("5_3i3es")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxwv"]
atlas = ExtResource("5_3i3es")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubo6w"]
atlas = ExtResource("5_3i3es")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2ew5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0teut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3l1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntn5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf15f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4slkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dev4a")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32h7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0rk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2unmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jefl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pjw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubo6w")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pix04"]
size = Vector2(31.1112, 75.5555)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgr6i"]
atlas = ExtResource("6_01qwq")
region = Rect2(0, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulnel"]
atlas = ExtResource("6_01qwq")
region = Rect2(48, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdeas"]
atlas = ExtResource("6_01qwq")
region = Rect2(96, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfsgo"]
atlas = ExtResource("6_01qwq")
region = Rect2(144, 96, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu6sd"]
atlas = ExtResource("6_01qwq")
region = Rect2(0, 480, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_edssw"]
atlas = ExtResource("6_01qwq")
region = Rect2(48, 480, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvdl3"]
atlas = ExtResource("6_01qwq")
region = Rect2(96, 480, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hugsx"]
atlas = ExtResource("6_01qwq")
region = Rect2(144, 480, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_rcgfi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgr6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulnel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdeas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfsgo")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu6sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edssw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvdl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hugsx")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l5gp"]
size = Vector2(31.1112, 75.5555)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cf3jx"]
size = Vector2(203, 20)

[node name="FinalMother" type="Node"]
script = ExtResource("1_lnx5o")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(212, 114)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_kryy8")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-71.3333, -42.6667)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(213.547, 121.5)
scale = Vector2(0.0941762, 0.095843)
texture = ExtResource("3_e1fpa")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(-82, -65)
scale = Vector2(1.5, 1.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(183, 137)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_v2ew5")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(182.667, 145.333)
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_pix04")

[node name="mom" type="CharacterBody2D" parent="."]
position = Vector2(-74, -95)
scale = Vector2(1.7, 1.7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="mom"]
position = Vector2(182.667, 145.333)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_rcgfi")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="mom"]
position = Vector2(182.667, 145.333)
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_3l5gp")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(153, 167)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(58, 13)
shape = SubResource("RectangleShape2D_cf3jx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 74.0
offset_top = 60.0
offset_right = 114.0
offset_bottom = 182.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 119.0
color = Color(0, 0.027451, 0.0980392, 1)

[node name="ControlDialog" parent="." instance=ExtResource("7_gvnd8")]
offset_left = -182.13
offset_top = -67.0
offset_right = 189.87
offset_bottom = -4.0

[node name="CanvasLayerTransition" parent="." instance=ExtResource("8_lviny")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6a5pk")
autoplay = true
bus = &"Music"

[connection signal="clear" from="ControlDialog" to="." method="_on_control_dialog_clear"]
